--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
 		"cy:run": "cypress run"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
 		"@types/node": "^24.0.8",
 		"@vitest/browser": "^3.2.4",
+		"bootstrap": "^5.3.7",
 		"prettier": "^3.6.2",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-bootstrap": "^2.10.10",
+		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.60.0",
+		"react-imask": "^7.6.1",
+		"zod": "^4.0.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
@@ -38,7 +44,7 @@
 		"jsdom": "^26.1.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.34.1",
-		"vite": "^7.0.0",
+		"vite": "^7.0.5",
 		"vitest": "^3.2.4"
 	}
 }
