--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,10 +8,8 @@
 		"skipLibCheck": true,
 		/* Bundler mode */
 		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"verbatimModuleSyntax": true,
-		//		"moduleDetection": "force",
-		"noEmit": true,
+		"verbatimModuleSyntax": false,
+		"noEmit": false,
 		"jsx": "react-jsx",
 		/* Linting */
 		"strict": true,
@@ -20,6 +18,7 @@
 		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
+		"composite": true,
 		/* Path */
 		"baseUrl": ".",
 		"paths": {
