--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - Lint & Tests
 
 on:
     push:
-        branches: ['main']
+        branches: ["main"]
     pull_request:
-        branches: ['main']
+        branches: ["main"]
 
 jobs:
     lint-and-test:
@@ -22,11 +22,19 @@ jobs:
             - name: 📦 Install Dependencies
               run: npm install
 
+            - name: 🧪 Run vitest
+              run: npm run test
+
             - name: 🧹 Run ESLint
               run: npm run lint
 
+            - name: 🚀 Start app in background
+              run: npm run dev &
+
+            - name: ⏳ Wait for app to be ready
+              run: npx wait-on $VITE_CYPRESS_BASE_URL
+
             - name: 🧪 Run e2e tests with Cypress
               run: npm run cy:run
-
-            - name: 🧪 Run vitest
-              run: npm run test
+              env:
+                VITE_CYPRESS_BASE_URL: http://localhost:5173
