--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
+		"@types/dotenv": "^6.1.1",
 		"@types/node": "^24.0.8",
 		"@vitest/browser": "^3.2.4",
+		"axios": "^1.11.0",
 		"bootstrap": "^5.3.7",
+		"cpf-cnpj-validator": "^1.0.3",
+		"dotenv": "^17.2.1",
 		"prettier": "^3.6.2",
 		"react": "^19.1.0",
 		"react-bootstrap": "^2.10.10",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.60.0",
-		"react-imask": "^7.6.1",
+		"sweetalert2": "^11.6.13",
 		"zod": "^4.0.5"
 	},
 	"devDependencies": {
@@ -42,6 +46,7 @@
 		"eslint-plugin-testing-library": "^7.5.3",
 		"globals": "^16.2.0",
 		"jsdom": "^26.1.0",
+		"start-server-and-test": "^2.0.12",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.34.1",
 		"vite": "^7.0.5",
