--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-		"target": "ES2023",
-		"lib": ["ES2023"],
-		"module": "ESNext",
+		"target": "ES2022",
+		"lib": ["ES2022"],
+		"module": "ES2022",
 		"skipLibCheck": true,
 		/* Bundler mode */
 		"moduleResolution": "bundler",
