--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
+		"@sideway/address": "^5.0.0",
+		"@sideway/formula": "^3.0.1",
 		"@types/dotenv": "^6.1.1",
 		"@types/node": "^24.0.8",
 		"@vitest/browser": "^3.2.4",
@@ -22,11 +24,13 @@
 		"bootstrap": "^5.3.7",
 		"cpf-cnpj-validator": "^1.0.3",
 		"dotenv": "^17.2.1",
+		"joi": "^18.0.1",
 		"prettier": "^3.6.2",
 		"react": "^19.1.0",
 		"react-bootstrap": "^2.10.10",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.60.0",
+		"react-router": "^7.9.1",
 		"sweetalert2": "^11.6.13",
 		"zod": "^4.0.5"
 	},
