--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"preview": "vite preview",
 		"format": "prettier . --write",
 		"test": "vitest",
+		"test:coverage": "vitest run --coverage",
 		"cy:open": "cypress open",
-		"cy:run": "cypress run"
+		"cy:run": "cypress run",
+		"cy:coverage": "cypress run & nyc report --reporter=html"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
 		"@sideway/address": "^5.0.0",
 		"@sideway/formula": "^3.0.1",
+		"@types/cypress": "^0.1.6",
 		"@types/dotenv": "^6.1.1",
 		"@types/node": "^24.0.8",
 		"@vitest/browser": "^3.2.4",
@@ -35,6 +38,7 @@
 		"zod": "^4.0.5"
 	},
 	"devDependencies": {
+		"@cypress/code-coverage": "^3.14.6",
 		"@eslint/js": "^9.29.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
@@ -42,6 +46,8 @@
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.5.2",
+		"@vitest/coverage-istanbul": "^3.2.4",
+		"@vitest/coverage-v8": "^3.2.4",
 		"cypress": "^14.5.1",
 		"eslint": "^9.29.0",
 		"eslint-plugin-jest-dom": "^5.5.0",
@@ -50,10 +56,12 @@
 		"eslint-plugin-testing-library": "^7.5.3",
 		"globals": "^16.2.0",
 		"jsdom": "^26.1.0",
+		"nyc": "^17.1.0",
 		"start-server-and-test": "^2.0.12",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.34.1",
 		"vite": "^7.0.5",
+		"vite-plugin-istanbul": "^7.2.0",
 		"vitest": "^3.2.4"
 	}
 }
