--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
     lint-and-test:
         runs-on: ubuntu-latest
+        env:
+            TERM: xterm
 
         steps:
             - name: 🔄 Code Checkout
